# Cpp20ForLazyProgrammers

SSDL/: README.SSDL.txt
SSDL/include/: SSDL_display.h  SSDL_font.h  SSDL_image.h  SSDL_sound.h
SSDL/src/: SSDL_display.cpp  SSDL_font.cpp  SSDL_singletonManager.cpp
ch1/: CMakeLists.txt
ch1/src/: boxes.cpp  boxes2.cpp  bug.cpp  drawDot.cpp  hello.cpp  quotation.cpp
ch2/: CMakeLists.txt
ch2/src/: beach.cpp  flamingo.cpp  sound.cpp
ch3/: CMakeLists.txt
ch3/src/: divers.cpp  numbers.cpp  star.cpp
